<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GeckoBrowser</string>
    <string name="url_hint">Rechercher ou saisir une adresse</string>
    <string name="go">Aller</string>
    <string name="menu">Menu</string>
    <string name="tabs">Onglets</string>

    <string name="find_hint">Rechercher dans la page</string>
    <string name="find_prev">Occurrence precedente</string>
    <string name="find_next">Occurrence suivante</string>
    <string name="find_close">Fermer la recherche</string>

    <string name="widget_search_hint">Rechercher</string>
    <string name="widget_private">Navigation privee</string>
    <string name="widget_bookmarks">Favoris</string>
    <string name="widget_blocked">elements bloques</string>
    <string name="widget_state">Etat du blocage</string>
    <string name="widget_on">Blocage actif</string>
    <string name="widget_off">Blocage inactif</string>
    <string name="widget_search_desc">Barre de recherche, navigation privee et favoris</string>
    <string name="widget_stats_desc">Compteur de blocage et interrupteur</string>
</resources>
